--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Django==1.5.4
+PIL==1.1.7
+South==0.8.2
 argparse==1.2.1
+django-tastypie==0.10.0
+mimeparse==0.1.3
 psycopg2==2.5.1
+python-dateutil==2.1
+six==1.4.1
 wsgiref==0.1.2
