--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ Django==1.5.4
 PIL==1.1.7
 South==0.8.2
 argparse==1.2.1
-django-tastypie==0.10.0
+django-appconf==0.6
+django-imagekit==3.0.4
 mimeparse==0.1.3
+pilkit==1.1.5
 psycopg2==2.5.1
 python-dateutil==2.1
 six==1.4.1
