--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 Django==1.5.4
 PIL==1.1.7
+Pillow==2.2.0
 South==0.8.2
 argparse==1.2.1
 django-appconf==0.6
+django-filer==0.9.5
 django-imagekit==3.0.4
+django-mptt==0.5.5
+django-polymorphic==0.5.3
+easy-thumbnails==1.4
 mimeparse==0.1.3
 pilkit==1.1.5
 psycopg2==2.5.1
